<resources>
    <string name="app_name">TV-Browser UpdatePlugin</string>
    <string name="authority_file_provider" translatable="false">org.tvbrowser.tvbrowserupdateplugin</string>

    <string name="service_update_name">TV-Browser UpdatePlugin</string>
    <string name="service_update_description">Plugin to update free version of TV-Browser the easy way.</string>

    <string name="dialog_info_update_available">An update for TV-Browser free to version {0} is available.\n\nDo you want to download and install it now?</string>
    <string name="dialog_info_update_ok">Yes</string>

    <string name="dialog_info_update_download">Downloading update to {0} for TV-Browser free.</string>
    <string name="dialog_info_update_error">Error.</string>
    <string name="dialog_info_update_error_message">Could not download update.\n\nPlease try using browser to download and install.\n\nDo you want to open browser now to download TV-Browser?</string>
    <string name="dialog_info_update_error_ok">Open browser</string>

    <string name="info_play_protect">Note: If the installation fails because Play Protect blocked it, you temporarily can disable Play Protect over the menu entry \'Open Play Protect\'.</string>

    <string name="dialog_permission_title">Installation needs permission</string>
    <string name="dialog_permission_message">To install plugins manually, you need to grant TV-Browser the permission to install from unknown sources.\n\nDo you want to open the settings to grant the permission now?</string>
    <string name="dialog_permission_ok">Open settings</string>

    <string name="dialog_no_internet_title">No network connection</string>
    <string name="dialog_no_internet_message">Please activate a network connection and try again.</string>

    <string name="dialog_no_update_title">No update available</string>
    <string name="dialog_no_update_message">No update to a newer version of TV-Browser was found.</string>

    <string name="dialog_no_revoke_title">Keep permissions</string>
    <string name="dialog_no_revoke_message">Please allow TV-Browser Update-Plugin to keep all granted permissions.\n\nThe Update-Plugin can only inform you about updates, if it has the needed permissions.</string>

    <string name="dialog_no_revoke_info_title">Information to Keep permissions</string>
    <string name="dialog_no_revoke_info_message">The setting can have different names, it regularly is a slider or is even missing completely.\nFor example the slider can have the following names:\n\n-Remove permissions if app is unused\m-Pause app activity if unused\n\nThis slider has to be disabled.</string>

    <string name="dialog_notification_permission_title">Allow notifications</string>
    <string name="dialog_notification_permission_message">Please allow TV-Browser Update-Plugin to show notifications.\nOnly when notifications are allowed, you can be informed about found updates.</string>

    <string name="notification_search">Searching update for TV-Browser free</string>
    <string name="notification_found_title">Found update for TV-Browser free</string>
    <string name="notification_found_message">Click to download and install</string>

    <string name="settings_now">Search now</string>
    <string name="settings_frequency_label">Search frequency:</string>
    <string-array name="settings_frequency_value_text">
        <item>Only manually</item>
        <item>Once per week</item>
        <item>Once per month</item>
        <item>Once every six months</item>
    </string-array>
    <string name="settings_include_beta">Include beta versions in search</string>

    <string name="open_play_protect">Open Play Protect</string>
    <string name="open_play_protect_error">Play Protect could not be found.</string>

    <string name="license"><![CDATA[<p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software
  and associated documentation files (the "Software"), to deal in the Software without restriction,
  including without limitation the rights to use, copy, modify, merge, publish, distribute,
  sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  furnished to do so, subject to the following conditions:</p>

  <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>

  <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
  LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR
  IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>]]></string>

</resources>
