<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:padding="@dimen/padding_default"
        android:id="@+id/settings_frequency_value"
        android:entries="@array/settings_frequency_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/settings_frequency_text"
        android:layout_toRightOf="@+id/settings_frequency_text"
        android:layout_alignBaseline="@+id/settings_frequency_text"
        />
    <TextView
        android:padding="@dimen/padding_default"
        android:textSize="@dimen/font_size_default"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/settings_frequency_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_frequency_label" />
    <CheckBox
        android:textSize="@dimen/font_size_default"
        android:id="@+id/settings_include_beta"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/settings_frequency_text"
        android:padding="@dimen/padding_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_include_beta"/>
    <Button
        android:layout_below="@id/settings_include_beta"
        android:textSize="@dimen/font_size_default"
        android:onClick="searchNow"
        android:text="@string/settings_now"
        android:padding="@dimen/padding_default"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/settings_search_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="@dimen/font_size_default"
        android:id="@+id/settings_info_update_text"
        android:padding="@dimen/padding_default"
        android:visibility="invisible"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/settings_search_now"
        android:text="@string/notification_found_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/settings_info_update_button"
        android:textSize="@dimen/font_size_default"
        android:padding="@dimen/padding_default"
        android:onClick="updateFound"
        android:visibility="invisible"
        android:text="@string/notification_found_message"
        android:layout_below="@id/settings_info_update_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="@dimen/font_size_default"
        android:id="@+id/settings_info_note_text"
        android:padding="@dimen/padding_default"
        android:visibility="invisible"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/settings_info_update_button"
        android:text="@string/info_play_protect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>